moved some folders

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,17 @@
   </head>
   <body>
 <ui-view></ui-view>
+<ul>
+  <li><a ui-sref="home">home</a></li>
+  <li><a ui-sref="projects">projects</a></li>
+  <li><a ui-sref="addProject">new project</a></li>
+
+</ul>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
 <script src="./dist/all.js"></script>
-<script src="./js/directives/addProjectDirective.js"></script>
-<script src="./js/testCtrl.js"></script>
+<!-- <script src="./js/directives/addProjectDirective.js"></script> -->
+<!-- <script src="./js/testCtrl.js"></script> -->
 
 
   </body>
