--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="./dist/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>B66Living</title>
   </head>
   <body>
-<ul>
-  <li><a ui-sref="home">home</a></li>
-  <li><a ui-sref="projects">projects</a></li>
-  <li><a ui-sref="addProject">new project</a></li>
-  <!-- <li><a ui-sref="seeProject({id: projects.id})">projects</a></li> -->
-  <li><a ui-sref="addCustomer">new customer</a></li>
 
 
+<div class="content-wrapper" >
+  <ui-view></ui-view>
+<!-- nav bar -->
 
+</div>
 
-</ul>
-<ui-view></ui-view>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
 <script src="./dist/all.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 <!-- <script src="./js/directives/addProjectDirective.js"></script> -->
 <!-- <script src="./js/testCtrl.js"></script> -->
 
