--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
   <body>
 
 
-<div class="content-wrapper" >
+<!-- <div class="content-wrapper" > -->
   <ui-view></ui-view>
 <!-- nav bar -->
 
-</div>
+<!-- </div> -->
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
