--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,11 @@
   </head>
   <body>
 
-
-<!-- <div class="content-wrapper" > -->
+<div class="soften-background">
+  
   <ui-view></ui-view>
-<!-- nav bar -->
 
-<!-- </div> -->
+</div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
