--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="./dist/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/dist/sweetalert/dist/sweetalert.css">
 
     <title>B66Living</title>
   </head>
   <body>
 
 <div class="soften-background">
-  
+
   <ui-view></ui-view>
 
 </div>
@@ -20,10 +21,12 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
-<script src="./dist/all.js"></script>
+<script src="/dist/sweetalert/dist/sweetalert-dev.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+
+<script src="./dist/all.js"></script>
+
 <!-- <script src="./js/directives/addProjectDirective.js"></script> -->
 <!-- <script src="./js/testCtrl.js"></script> -->
 
