--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/dist/sweetalert/dist/sweetalert.css">
 
-    <title>B66Living</title>
+    <title>Project Balance</title>
   </head>
   <body>
 
